--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
-  "dependencies": {
-    "@tailwindcss/cli": "^4.1.12",
-    "tailwindcss": "^4.1.12"
-  },
-
+  "name": "superior-star",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "build": "npx @tailwindcss/cli -i ./static/css/input.css -o ./static/css/output.css --watch"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "@astrojs/react": "^4.4.2",
+    "@tailwindcss/vite": "^4.1.18",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
+    "astro": "^5.17.1",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "tailwindcss": "^4.1.18"
   }
 }
